--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "description": "Dependency injection library",
   "main": "index.js",
+  "types": "types/index.d.ts",
   "scripts": {
-    "test": "zUnit"
+    "test": "zUnit",
+    "types": "tsc"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,7 @@
   "homepage": "https://github.com/sithmel/sistema#readme",
   "devDependencies": {
     "prettier": "^2.8.8",
+    "typescript": "^5.1.3",
     "zunit": "^4.0.2"
   },
   "prettier": {
