--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,18 @@
 {
-    // Change this to match your project
-    "include": ["index.js"],
-    "compilerOptions": {
-      "lib": [
-        "es2018",
-        "dom"
-      ],
-      // Tells TypeScript to read JS files, as
-      // normally they are ignored as source files
-      "allowJs": true,
-      // Generate d.ts files
-      "declaration": true,
-      // This compiler run should
-      // only output d.ts files
-      "emitDeclarationOnly": true,
-      // go to js file when using IDE functions like
-      // "Go to Definition" in VSCode
-      "declarationMap": true
-    }
+  // Change this to match your project
+  "include": ["index.js"],
+  "compilerOptions": {
+    "lib": ["es2018"],
+    // Tells TypeScript to read JS files, as
+    // normally they are ignored as source files
+    "allowJs": true,
+    // Generate d.ts files
+    "declaration": true,
+    // This compiler run should
+    // only output d.ts files
+    "emitDeclarationOnly": true,
+    // go to js file when using IDE functions like
+    // "Go to Definition" in VSCode
+    "declarationMap": true
   }
+}
