Introduce strict typing, readme fixes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "emitDeclarationOnly": true,
     // go to js file when using IDE functions like
     // "Go to Definition" in VSCode
-    "declarationMap": true
+    "declarationMap": true,
+    "strict": true
   }
 }
